--- a/index.html
+++ b/index.html
@@ -3,38 +3,50 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>Page Title</title>
-<meta name="description" content="Roughly 155 characters">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
-<link href='https://fonts.googleapis.com/css?family=Montez' rel='stylesheet' type='text/css'>
+<meta name="description" content="Portofolio Argentina Programa">
+<meta name="keywords" content="Portfolio">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
+<title>Portfolio Argentina Programa</title>
+<link rel="stylesheet" href="styles.css">
 </head>
+<header id="main-header">
+	
+	<a id="logo-header" href="#">
+		<img src="logo argentina.png">
+		
+	</a> <!-- / #logo-header -->
 
-<body>
-    <ul>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
+	<nav>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Redes</a></li>
+			<li><a href="#">Contacto</a></li>
+		</ul>
+	</nav><!-- / nav -->
 
-<link rel="stylesheet" type="text/css" href="mystyle.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="script.js"></script>
-</head>
-<body>
-<!-- Content -->
-    <div>
+</header><!-- / #main-header -->
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<div class="container-fluid">
-    <div class="row align-items-start">
-      <div class="col">
-        <b id="destacado">Elizabet Santana</b>
-      </div>
-      <div id="profile-backround">
-      </div>
-    </div>
-</body>
-</html>
+
+<section id="main-content">
+
+	<article>
+		<header>
+			<h1>Elizabet Santana</h1>
+		</header>
+		
+		<img src="3d.jpg" alt="3D" />
+		
+		<div class="content">
+			
+		</div>
+		
+	</article>	<!-- / article -->
+
+</section><!-- / #main-content -->
+
+
+
+<footer id="main-footer">
+	
+</footer><!-- / #main-footer -->
+</html>		
